<resources>
    <string name="app_name">Regagnani Viagens</string>
    <string name="fotodolugar">fotodolugar</string>
    <string name="banner_inicial_dos_pacotes">banner inicial dos pacotes</string>
    <string name="pre_o_final">Preço Final:</string>
    <string name="realizar_pagamento">Realizar pagamento</string>
    <string name="foto_do_local">foto do local</string>
    <string name="digite_as_informa_es_do_cart_o_de_credito_que_voc_deseja_usar_para_o_pagamento">Digite as informações do cartão de credito que você deseja usar para o pagamento</string>
    <string name="valor_da_compra">Valor da compra:</string>
    <string name="numero_do_cart_o">Numero do cartão</string>
    <string name="mm">MM</string>
    <string name="aa">AA</string>
    <string name="cvc">CVC</string>
    <string name="nome_no_cart_o">Nome no cartão</string>
    <string name="finalizar_compra">Finalizar Compra</string>
    <string name="conte_do_do_banner_inicial">Conteúdo do banner inicial</string>
</resources>